--- a/src/styles/Trainers.css
+++ b/src/styles/Trainers.css
@@ -82,3 +82,10 @@
   line-height: 1.6;
   color: #bbb;
 }
+
+.trainers-feedback {
+  text-align: center;
+  font-size: 1.2rem;
+  color: #ccc;
+  margin-top: 50px;
+}
