--- a/src/styles/LoginSignup.css
+++ b/src/styles/LoginSignup.css
@@ -1,7 +1,10 @@
 /* Full background with overlay */
 .login-wrapper {
   min-height: 100vh;
-  background: url('https://images.pexels.com/photos/1552249/pexels-photo-1552249.jpeg?auto=compress&cs=tinysrgb&w=1600') center/cover no-repeat;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+
   display: flex;
   justify-content: center;
   align-items: center;
